Fix z-index issue of AfterSchool Table's header preceding Datepicker

--- a/app/assets/stylesheets/after_schools.css.scss
+++ b/app/assets/stylesheets/after_schools.css.scss
@@ -3,8 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #date {
   width: 280px;
+  z-index: 2;
 }
 
 #hot {
+z-index: 1;
 }
 
